# netrobots

./: CHANGELOG  DEV.org  README.md  config.py  default.nix  requirements.txt  run-demo.sh  run-server.sh  run-tests.sh  run.py
app/: __init__.py
app/board/: controllers.py
client/: netrobots.proto  netrobots_pb2.py
client/generated_rest_api/dynamic-html/docs/: index.html
client/generated_rest_api/go/swagger/: DefaultApi.go  DriveCommand.go  FireCommand.go  RemoveCommand.go  RobotConfiguration.go  RobotStatus.go  ScanCommand.go
client/generated_rest_api/haskell-servant/: haskell-servant-codegen.cabal
client/generated_rest_api/haskell-servant/client/: Main.hs
client/generated_rest_api/html/: index.html
client/generated_rest_api/javascript/: README.md  package.json
client/generated_rest_api/javascript/docs/: DefaultApi.md  DriveCommand.md  FireCommand.md  RemoveCommand.md  RobotConfiguration.md  RobotStatus.md  ScanCommand.md  ScanStatus.md
client/generated_rest_api/javascript/src/: ApiClient.js  index.js
client/generated_rest_api/php/SwaggerClient-php/: README.md
client/generated_rest_api/python/: setup.py
client/generated_rest_api/ruby/: README.md
dev_scripts/: generate_from_swagger.sh
doc/: rest_api.yaml
elm/: BoardViewer.elm  default.nix  elm-package.json  make.sh
example/python/: rabbit.py  sniper.py
external_tools/: generate_from_swagger.sh
robot_examples/haskell-servant/rest_api/: haskell-servant-codegen.cabal
robot_examples/haskell-servant/rest_api/client/: Main.hs
robot_examples/haskell-servant/rest_api/lib/Api/: DefaultApi.hs
robot_examples/haskell-servant/rest_api/lib/Model/: BoardInfo.hs  DriveCommand.hs  Event.hs  EventCreateRobot.hs  EventDrive.hs  EventExplosion.hs  EventMissile.hs  EventRemoveRobot.hs  EventRobotCollision.hs  EventScan.hs  RobotConfiguration.hs  RobotInfo.hs  RobotStatus.hs  ScanStatus.hs
robot_examples/html/rest_api/: index.html
robot_examples/javascript/rest_api/: README.md  package.json
robot_examples/python/: robot.py
robot_examples/python/rest_api/: setup.py
robot_examples/ruby/rest_api/: README.md
server/: game_model.py  game_server.py
server/rest_api/: __init__.py  configuration.py
server/rest_api/apis/: default_api.py
server/rest_api/models/: __init__.py  direction.py  distance.py  drive_command.py  event_explosion.py  event_remove_robot.py  event_scan.py  fire_command.py  remove_command.py  robot_command.py  robot_configuration.py  robot_health.py  robot_status.py  scan_command.py  scan_status.py  semi_aperture.py  speed.py  token.py
server/static/js/: BoardViewer.js
server/templates/: 404.html  base.html  board.html  home.html
tests/: functional_test.py  robot.py  test_board.py
(+325 files in other folders)
